--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&family=Roboto:wght@300&display=swap');
+
 html, body {
   margin: 0;
   padding: 0;
+  background-image: url("../assets/grunge-bg.png");
+  /* background-size: 100% auto; */
 }
 
 * {
@@ -11,8 +15,8 @@ html, body {
 
 li, a, button {
   color: white;
-  font-family: 'Poppins', sans-serif;
-  font-weight: 400;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 600;
   text-decoration: none;
   font-size: 20px;
 }
@@ -21,8 +25,9 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-left: 30px 10;
-  background-color: rgba(45, 45, 44, 0.9)
+  padding: 10px;
+  /* padding-left: 30px 10; */
+  background-color: rgba(45, 45, 44, 0.6);
 }
 
 #imgLogo {
@@ -49,7 +54,7 @@ header {
 
 button {
   padding: 9px 25px;
-  background: rgba(50, 187, 226, 95%);
+  background: rgba(79,150,212, 80%);
   border-radius: 20px;
   border-width: 0px;
   cursor: pointer;
@@ -64,7 +69,69 @@ button: hover {
   transition: all 0.3s ease 0s;
 }
 
+h2{
+  color: white;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 300;
+}
+
+h3{
+  font-size: 1.5vh;
+  color: white;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 400;
+}
+
+.box{
+  height: 5%;
+  background: none;
+  margin: 3%;
+}
+
+.intro-phrase{
+  text-align: center;
+  padding-top: 10%;
+}
+
+.intro{
+  top: 10%;
+  text-align: center;
+  margin-top: 3%;
+}
+
+.intro-play{
+text-align: center;
+margin-top: 2%;
+}
+
 #canvas-container {
   position: absolute;
-  transform: scaleX(0.65) scaleY(0.65);
+  position: block;
+  transform: scaleX(0.60) scaleY(0.60);
+  left: calc(50% - 1200px);
+top: calc(50% - 770px);
+z-index: 1;
+}
+
+/*page 3 canvas*/
+#canvas-container-game {
+  position: absolute;
+  position: block;
+  /* transform: scaleX(0.60) scaleY(0.60); */
+  left: calc(50% - 750px);
+top: calc(50% - 500px);
+z-index: 1;
+}
+
+/* manga pages */
+.instruction{
+  text-align: center;
+  margin: 2.5%;
+}
+
+/* footer */
+#footer{
+  position: absolute;
+  top: 96%;
+  left: 44%;
 }
