--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,7 @@ h2 {
   color: white;
   font-family: 'Roboto Condensed', sans-serif;
   font-weight: 300;
+    font-size: 3vh;
 }
 
 h3 {
@@ -111,39 +112,9 @@ text-align: center;
 }
 
 .intro {
-  top: 10%;
+  top: 10vh;
   text-align: center;
   margin-top: 3%;
-}
-
-.modal-container {
-    background-color: rgba(0, 0, 0, 0.5);
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    opacity: 1;
-    pointer-events: auto;
-    z-index: 0;
-}
-
-.modal-container.close {
-  pointer-events: none;
-  opacity: 0;
-}
-
-.modal {
-background-color: white;
-position: fixed;
-top: 35vh;
-left: 30%;
-width: 70vh;
-max-width: 100%;
-padding-top: 48px;
-border-radius: 10px;
-z-index: 1;
-
 }
 
 #name-input{
@@ -156,7 +127,7 @@ z-index: 1;
 
 ::placeholder {
   text-align: center;
-  font-size: 1.4vh;
+  font-size: 1.8vh;
   font-family: 'Roboto Condensed', sans-serif;
   font-weight: 400;
   color: rgba(55, 57, 57, 0.6)
@@ -179,17 +150,18 @@ width: 400px; */
 /* p5 canvas */
 #canvas-container {
   position: absolute;
-  left: 50%;
-  top: 50%;
+  left: 50vw;
+  top: 58vh;
   transform: translate(-50%, -50%);
   z-index: -1;
+
 }
 
 /*page 3 canvas*/
 #canvas-container-game {
   position: absolute;
-  left: 50%;
-  top: 50%;
+  left: 50vw;
+  top: 58vh;
   transform: translate(-50%, -50%);
   z-index: 1;
 }
@@ -205,5 +177,68 @@ margin: 2vh;
 /* footer */
 #footer {
   position: absolute;
-  top: 96%;
+  top: 100vh; ;
   left: 44%;
+  margin: 1vh;
+}
+
+.idx-instructions h2 {
+ color: rgb(18, 21, 22);
+ margin-left: 3.9vh;
+ font-weight: 600;
+}
+
+.idx-instructions p {
+  margin: 3vh;
+ color: rgb(18, 21, 22);
+ font-size: 1.8vh;
+ font-family: 'Roboto Condensed', sans-serif;
+ font-weight: 400;
+}
+
+.modal-container {
+    background-color: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    pointer-events: none;
+}
+
+.modal-container.show {
+  pointer-events: auto;
+  opacity: 1;
+}
+
+.modal {
+  background-color: white;
+  position: fixed;
+  top: 35vh;
+  left: 30%;
+  width: 70vh;
+  max-width: 100%;
+  padding-top: 48px;
+  padding-left: 20px;
+  padding-bottom: 20px;
+  border-radius: 10px;
+}
+
+.exit{
+  margin-top: 25vh;
+  text-align:center;
+}
+
+.exit h2{
+  margin: 3vh;
+  text-align:center;
+  font-size: 4vh;
+  font-weight: 600;
+}
+
+.exit h3{
+  margin: 2vh;
+  text-align:center;
+  font-size: 3vh;
+}
